⚡ :: collect → list